@@ -11,6 +11,7 @@ import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * 小说分类 缓存管理类
@@ -36,7 +37,7 @@ public class BookCategoryCacheManager {
                 BookCategoryRespDto.builder()
                         .id(v.getId())
                         .name(v.getName())
-                        .build()).toList();
+                        .build()).collect(Collectors.toList());
     }
 
 }
